modified: getLast() and getFirst() were replaced